# llm-sycophancy-reducer

./: .gitignore  .heartbeat-callback  README.md  pyproject.toml  requirements.txt  spec.md
llmsyc/: __init__.py  cli.py  lib.py  models.py  optimizer.py  stats.py
tests/: test_cli.py  test_lib.py  test_optimizer.py  test_stats.py
